# fetchx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
fetchx_cli/: __init__.py  _version.py  main.py
fetchx_cli/cli/: commands.py  interface.py  validators.py
fetchx_cli/config/: defaults.py  settings.py
fetchx_cli/core/: connection.py  database.py  downloader.py  merger.py  queue.py  session.py
fetchx_cli/utils/: clipboard.py  exceptions.py  file_utils.py  folder_manager.py  logging.py  network.py  optimizations.py  progress.py
