[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetchx"
version = "0.1.0"
description = "A powerful command-line Internet Download Manager"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "FETCHX IDM Team"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

[project.scripts]
fetchx = "fetchx_cli.main:main"
fx = "fetchx_cli.main:main"